    sysusers and init related snippets.  Based on an initial patch
    from Helmut Grohne.  (Closes: #983566)
  * autoscripts/*: Reorder conditions in some scripts to avoid
    doing a redundant stat call when a script paramter can decide
    to skip it.
  * dh_gconf: Remove the command as it does nothing.
    (Closes: #908845)
  * doc/TODO: Remove reference to dh_gconf.
  * root_sequence.pm: Remove dh_gconf from root sequence.
  * man/po4a/po4a.cfg: Remove dh_gconf from translations.

 -- Niels Thykier <niels@thykier.net>  Sun, 21 Mar 2021 09:38:35 +0000

debhelper (13.3.4) unstable; urgency=medium

  [ Jakub Wilk ]
  * debhelper.pod: Add missing space after ")"

  [ Translations ]
  * Update French translation (Jean-Pierre Giraud)  (Closes: #982675)

 -- Niels Thykier <niels@thykier.net>  Sat, 06 Mar 2021 09:53:10 +0000

debhelper (13.3.3) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_installsysusers: Add systemd-sysusers as alternative provider
    in the ${misc:Depends} dependency as that is the name used by
    opensysusers.

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)  (Closes: #981567)

 -- Niels Thykier <niels@thykier.net>  Wed, 03 Feb 2021 19:43:32 +0000

debhelper (13.3.2) unstable; urgency=medium

  * Team upload.

  [ Niels Thykier ]
  * cmake.pm: Correct parameter -DCMAKE_BUILD_RPATH_USE_ORIGIN=ON
    passed to cmake in compat 14+.  Thanks to Raul Tambre for
    reporting the issue.  (Closes: #977255)
  * dh_strip: Fix wording.  Thanks to Chris Leick and Pfannenstein
    Erik.
  * debhelper.pod: Fix typos.  Thanks to Chris Leick and
    Pfannenstein Erik.
  * dh_makeshlibs: Ditto.
  * debian/control: Bump Standards-Versions to 4.5.1.  No changes
    required.

  [ Axel Beckert ]
  * Extend dh_installdocs documentation on debian/$pkg.doc-base.* with
    regards to when deduplication does not work and may cause
    uninstallable packages. (Mitigates: #980903)

  [ Translations ]